packages/taquito-michel-codec/test/contracts_010/ill_typed/ticket_unpack.tz
# UNPACK on ticket should produce a type error
parameter unit;
storage (option (ticket nat));
code { DROP ; PUSH nat 2 ; PACK ; UNPACK (ticket nat) ;
       NIL operation ; PAIR }
